fix scrollbar

--- a/src/App.less
+++ b/src/App.less
@@ -9,6 +9,7 @@ body {
   // scrollbar-width: none;
   font-family: "Poppins";
   background: white;
+  overflow-x: hidden;
 }
 
 .container {
