--- a/src/screens/components/footer/footer.style.less
+++ b/src/screens/components/footer/footer.style.less
@@ -21,7 +21,9 @@
 
 .social {
   width: 32px;
+  height: 32px;
   cursor: pointer;
+  object-fit: contain;
 }
 
 #logo {
