--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -107,6 +107,8 @@ input:focus {
 
   box-shadow: inset 1px 1px 4px rgba(0, 0, 0, 0.2);
   border-radius: 20px;
+  overflow: hidden;
+  scrollbar-width: none;
 }
 
 .no-wrap {
@@ -127,6 +129,7 @@ input:focus {
   box-shadow: inset 1px 1px 4px rgba(0, 0, 0, 0.2);
   border-radius: 20px;
   padding: 8px 8px 8px 15px;
+  overflow: hidden;
 }
 
 .utils-input {
